--- a/Eliptic_Curve.ipynb
+++ b/Eliptic_Curve.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5U1SHXs5bzR+CQ+Lol4Yt",
+      "authorship_tag": "ABX9TyMmdCZbwP09kQbeB1Oqgr90",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +38,12 @@
       "metadata": {
         "id": "I_t6XRSQdSSs"
       },
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {
         "id": "NRNfL9DYZg_l"
       },
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "PAbbH9sSdT4W"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -285,50 +285,7 @@
       "metadata": {
         "id": "G_GGiFeEcgyP"
       },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def encode_char_as_point(curve, char, max_tries=1000):\n",
-        "    \"\"\"Encode a single character as a point on the curve.\"\"\"\n",
-        "    m = ord(char)  # Convert char to integer\n",
-        "    for j in range(max_tries):\n",
-        "        x = (m + j) % curve.p\n",
-        "        rhs = (x**3 + curve.a * x + curve.b) % curve.p\n",
-        "        y_candidates = curve.sqr_root_mod_p(rhs, curve.p)\n",
-        "        if y_candidates is not None:\n",
-        "            y = y_candidates[0]  # pick one root\n",
-        "            return Point(x, y), j\n",
-        "    raise ValueError(f\"Cannot encode char {char} as point\")\n",
-        "\n",
-        "def decode_point_to_char(curve, point, j):\n",
-        "    \"\"\"Decode a point back to a character.\"\"\"\n",
-        "    m = (point.x - j) % curve.p\n",
-        "    return chr(m)\n",
-        "\n",
-        "def encode_message(curve, message):\n",
-        "    \"\"\"Encode an entire string as points.\"\"\"\n",
-        "    encoded = []\n",
-        "    offsets = []  # store the j offset for decoding\n",
-        "    for char in message:\n",
-        "        P, j = encode_char_as_point(curve, char)\n",
-        "        encoded.append(P)\n",
-        "        offsets.append(j)\n",
-        "    return encoded, offsets\n",
-        "\n",
-        "def decode_message(curve, points, offsets):\n",
-        "    \"\"\"Decode points back to string.\"\"\"\n",
-        "    decoded = \"\"\n",
-        "    for P, j in zip(points, offsets):\n",
-        "        decoded += decode_point_to_char(curve, P, j)\n",
-        "    return decoded\n"
-      ],
-      "metadata": {
-        "id": "q_gSKdAPX6E_"
-      },
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -346,20 +303,35 @@
       "metadata": {
         "id": "A7VBTkH8c30v"
       },
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "curve = Elipic_Curve(a, b, p,salt)\n",
-        "G = Point(Gx, Gy)"
+        "print(curve)\n",
+        "G = Point(Gx, Gy)\n",
+        "print(G)"
       ],
       "metadata": {
-        "id": "nkHpQZ8Qkigr"
+        "id": "nkHpQZ8Qkigr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a930d3a-65e5-440f-8f74-cc53693bb0a0"
       },
-      "execution_count": 7,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(0,7,115792089237316195423570985008687907853269984665640564039457584007908834671663,b'\\x12\\x05nU\\xb6\\xb7\\xcb\\xf4va\\xd8Rd\\x02\\xe0\\xba')\n",
+            "(55066263022277343669578718895168534326250603453777594175500187360389116729240,32670510020758816978083085130507043184471273380659243275938904335757337482424)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -374,15 +346,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pjz5Zp5dk6fV",
-        "outputId": "e4c1128b-5bcd-4258-cef4-895a0eab9687"
+        "outputId": "97fb2158-57bf-4c85-a94d-ccc40ae184ed"
       },
-      "execution_count": 8,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Private key d: 84755301461479477322287225859910650509398176976075111056198492955507452380178\n"
+            "Private key d: 60159238478533472668632988213651047051807135698414826041711905388723971693040\n"
           ]
         }
       ]
@@ -398,15 +370,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AIxUn-6Gk6dx",
-        "outputId": "074606c7-c155-421f-c2c9-f45c82f8175c"
+        "outputId": "df20f942-e858-4141-fedc-da61d1124cbc"
       },
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Public key Q: (10244793747290850127740109584335398266770183030931581664580105123063287011648,39178706110166539638227922497366475164904718009737745179493841376869076375448)\n"
+            "Public key Q: (95313812788696229704979422681802663980288852291100192442427440126060814436817,39797658172962333727590916744797770878654158122923832768381282931747875993339)\n"
           ]
         }
       ]
@@ -425,9 +397,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7n8DUY2uX4f_",
-        "outputId": "0fc1d15f-3179-4369-bdde-44c34e3e2f27"
+        "outputId": "fddfda0e-4646-4bfe-ba0a-5dfc0508c565"
       },
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,266 +409,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
-        "# from cryptography.hazmat.primitives import hashes\n",
-        "# from cryptography.hazmat.primitives.ciphers.aead import AESGCM\n",
-        "# import secrets\n",
-        "# import os\n",
-        "\n",
-        "# # ---------------- Point class (fixed) ----------------\n",
-        "# class Point:\n",
-        "#     def __init__(self, x, y):\n",
-        "#         self.x = x\n",
-        "#         self.y = y\n",
-        "\n",
-        "#     def __eq__(self, other):                # FIXED: equality for comparisons\n",
-        "#         if other is None:\n",
-        "#             return False\n",
-        "#         return (self.x == other.x) and (self.y == other.y)\n",
-        "\n",
-        "#     def __repr__(self):\n",
-        "#         return f\"Point({self.x}, {self.y})\"\n",
-        "\n",
-        "#     def __str__(self):\n",
-        "#         return \"(\" + str(self.x) + \",\" + str(self.y) + \")\"\n",
-        "\n",
-        "# # ---------------- helper inverse (unchanged) ----------------\n",
-        "# def inverse_mod_p(a, p):\n",
-        "#     \"\"\"Return modular inverse of a mod p. Assumes p is prime and a % p != 0.\"\"\"\n",
-        "#     return pow(a, -1, p)\n",
-        "\n",
-        "# # ---------------- Corrected Elliptic Curve class ----------------\n",
-        "# class Elipic_Curve:\n",
-        "#     def __init__(self, a, b, p):\n",
-        "#         self.a = a\n",
-        "#         self.b = b\n",
-        "#         self.p = p\n",
-        "\n",
-        "#     def __str__(self):\n",
-        "#         return f\"({self.a},{self.b},{self.p})\"\n",
-        "\n",
-        "#     def is_on_curve(self, P):\n",
-        "#         \"\"\"Return True if point P is on the curve or P is None (point at infinity).\"\"\"\n",
-        "#         if P is None:\n",
-        "#             return True\n",
-        "#         return (P.y * P.y - (P.x * P.x * P.x) - self.a * P.x - self.b) % self.p == 0\n",
-        "\n",
-        "#     def add(self, P, Q):\n",
-        "#         \"\"\"Add two points P and Q on the curve (handle point at infinity).\"\"\"\n",
-        "#         # identity cases\n",
-        "#         if P is None:\n",
-        "#             return Q\n",
-        "#         if Q is None:\n",
-        "#             return P\n",
-        "\n",
-        "#         # P + (-P) = O\n",
-        "#         if (P.x % self.p) == (Q.x % self.p) and ((P.y + Q.y) % self.p) == 0:\n",
-        "#             return None\n",
-        "\n",
-        "#         if P == Q:\n",
-        "#             # point doubling\n",
-        "#             if (P.y % self.p) == 0:\n",
-        "#                 return None  # tangent is vertical -> point at infinity\n",
-        "#             num = (3 * (P.x * P.x) + self.a) % self.p\n",
-        "#             den = (2 * P.y) % self.p\n",
-        "#             l = (num * inverse_mod_p(den, self.p)) % self.p\n",
-        "#         else:\n",
-        "#             # distinct points\n",
-        "#             if (P.x - Q.x) % self.p == 0:\n",
-        "#                 return None\n",
-        "#             num = (Q.y - P.y) % self.p\n",
-        "#             den = (Q.x - P.x) % self.p\n",
-        "#             l = (num * inverse_mod_p(den, self.p)) % self.p\n",
-        "\n",
-        "#         x_r = (l * l - P.x - Q.x) % self.p\n",
-        "#         y_r = (l * (P.x - x_r) - P.y) % self.p\n",
-        "#         return Point(x_r, y_r)\n",
-        "\n",
-        "#     def double(self, P):\n",
-        "#         \"\"\"Return 2P.\"\"\"\n",
-        "#         return self.add(P, P)\n",
-        "\n",
-        "#     def neg_point(self, P):\n",
-        "#         \"\"\"Return -P.\"\"\"\n",
-        "#         if P is None:\n",
-        "#             return None\n",
-        "#         return Point(P.x, (-P.y) % self.p)\n",
-        "\n",
-        "#     def scaler_multiply(self, k, P):\n",
-        "#         \"\"\"\n",
-        "#         Scalar multiplication k * P using double-and-add.\n",
-        "#         Accepts negative k (uses negation).\n",
-        "#         FIXED: handle k == 0, negative k, and avoid using self.p in k modulus.\n",
-        "#         \"\"\"\n",
-        "#         if P is None or k == 0:\n",
-        "#             return None\n",
-        "#         if k < 0:\n",
-        "#             return self.scaler_multiply(-k, self.neg_point(P))\n",
-        "\n",
-        "#         result = None\n",
-        "#         addend = P\n",
-        "\n",
-        "#         while k:\n",
-        "#             if k & 1:\n",
-        "#                 result = self.add(result, addend)\n",
-        "#             addend = self.double(addend)\n",
-        "#             k >>= 1\n",
-        "#         return result\n",
-        "\n",
-        "#     def legendre_symbol(self, a):\n",
-        "#         \"\"\"Compute the Legendre symbol (a|p) where p = self.p. Returns 0,1,-1.\"\"\"\n",
-        "#         a = a % self.p\n",
-        "#         if a == 0:\n",
-        "#             return 0\n",
-        "#         ls = pow(a, (self.p - 1) // 2, self.p)\n",
-        "#         return -1 if ls == self.p - 1 else ls\n",
-        "\n",
-        "#     def sqr_root_mod_p(self, a):\n",
-        "#         \"\"\"\n",
-        "#         Tonelli-Shanks: return None if no sqrt, otherwise return [r, p-r].\n",
-        "#         Uses self.p (prime).\n",
-        "#         \"\"\"\n",
-        "#         a = a % self.p\n",
-        "#         if a == 0:\n",
-        "#             return [0]\n",
-        "#         if self.p == 2:\n",
-        "#             return [a]\n",
-        "#         if self.legendre_symbol(a) != 1:\n",
-        "#             return None\n",
-        "\n",
-        "#         # Simple case p % 4 == 3\n",
-        "#         if self.p % 4 == 3:\n",
-        "#             r = pow(a, (self.p + 1) // 4, self.p)\n",
-        "#             return [r, (-r) % self.p]\n",
-        "\n",
-        "#         # Factor p-1 as Q * 2^S with Q odd\n",
-        "#         Q = self.p - 1\n",
-        "#         S = 0\n",
-        "#         while Q % 2 == 0:\n",
-        "#             Q //= 2\n",
-        "#             S += 1\n",
-        "\n",
-        "#         # find a quadratic non-residue z\n",
-        "#         z = 2\n",
-        "#         while self.legendre_symbol(z) != -1:\n",
-        "#             z += 1\n",
-        "\n",
-        "#         c = pow(z, Q, self.p)\n",
-        "#         R = pow(a, (Q + 1) // 2, self.p)\n",
-        "#         t = pow(a, Q, self.p)\n",
-        "#         M = S\n",
-        "\n",
-        "#         while t % self.p != 1:\n",
-        "#             # find smallest i, 0 < i < M, such that t^(2^i) == 1\n",
-        "#             i = 1\n",
-        "#             t2 = (t * t) % self.p\n",
-        "#             while t2 != 1:\n",
-        "#                 t2 = (t2 * t2) % self.p\n",
-        "#                 i += 1\n",
-        "#                 if i == M:\n",
-        "#                     raise ValueError(\"sqr_root_mod_p failed to find i\")\n",
-        "#             b = pow(c, 1 << (M - i - 1), self.p)\n",
-        "#             R = (R * b) % self.p\n",
-        "#             c = (b * b) % self.p\n",
-        "#             t = (t * c) % self.p\n",
-        "#             M = i\n",
-        "\n",
-        "#         return [R, (-R) % self.p]\n",
-        "\n",
-        "#     # ---------------- helpers to (de)serialize points and ints ----------------\n",
-        "#     def int_to_bytes_fixed(self, v, length):\n",
-        "#         return v.to_bytes(length, \"big\")\n",
-        "\n",
-        "#     def bytes_to_int(self, b):\n",
-        "#         return int.from_bytes(b, \"big\")\n",
-        "\n",
-        "#     def point_to_bytes(self, P):\n",
-        "#         if P is None:\n",
-        "#             raise ValueError(\"cannot serialize point at infinity\")\n",
-        "#         field_len = (self.p.bit_length() + 7) // 8\n",
-        "#         bx = self.int_to_bytes_fixed(P.x, field_len)\n",
-        "#         by = self.int_to_bytes_fixed(P.y, field_len)\n",
-        "#         return bx + by\n",
-        "\n",
-        "#     def bytes_to_point(self, data):\n",
-        "#         field_len = (self.p.bit_length() + 7) // 8\n",
-        "#         if len(data) != 2 * field_len:\n",
-        "#             raise ValueError(\"bad point encoding length\")\n",
-        "#         bx = data[:field_len]\n",
-        "#         by = data[field_len:]\n",
-        "#         x = int.from_bytes(bx, \"big\")\n",
-        "#         y = int.from_bytes(by, \"big\")\n",
-        "#         P = Point(x, y)\n",
-        "#         if not self.is_on_curve(P):\n",
-        "#             raise ValueError(\"point not on curve\")\n",
-        "#         return P\n",
-        "\n",
-        "#     # ---------------- ECIES-like encrypt/decrypt (unchanged) ----------------\n",
-        "#     def ecies_encrypt(self, recipient_Q, plaintext, info=b\"ECIES-v1\"):\n",
-        "#         eph_priv = secrets.randbelow(n - 1) + 1\n",
-        "#         eph_pub = self.scaler_multiply(eph_priv, G)\n",
-        "#         S = self.scaler_multiply(eph_priv, recipient_Q)\n",
-        "#         if S is None:\n",
-        "#             raise ValueError(\"invalid shared secret\")\n",
-        "\n",
-        "#         field_len = (self.p.bit_length() + 7) // 8\n",
-        "#         shared_bytes = self.int_to_bytes_fixed(S.x, field_len)\n",
-        "\n",
-        "#         hkdf = HKDF(algorithm=hashes.SHA256(), length=32, salt=None, info=info)\n",
-        "#         sym_key = hkdf.derive(shared_bytes)\n",
-        "\n",
-        "#         aesgcm = AESGCM(sym_key)\n",
-        "#         nonce = os.urandom(12)\n",
-        "#         ciphertext = aesgcm.encrypt(nonce, plaintext, associated_data=None)\n",
-        "#         return {\"ephemeral_pub\": self.point_to_bytes(eph_pub), \"nonce\": nonce, \"ciphertext\": ciphertext}\n",
-        "\n",
-        "#     def ecies_decrypt(self, recipient_priv, bundle, info=b\"ECIES-v1\"):\n",
-        "#         eph_pub = self.bytes_to_point(bundle[\"ephemeral_pub\"])\n",
-        "#         S = self.scaler_multiply(recipient_priv, eph_pub)\n",
-        "#         if S is None:\n",
-        "#             raise ValueError(\"invalid shared secret on decrypt\")\n",
-        "\n",
-        "#         field_len = (self.p.bit_length() + 7) // 8\n",
-        "#         shared_bytes = self.int_to_bytes_fixed(S.x, field_len)\n",
-        "#         hkdf = HKDF(algorithm=hashes.SHA256(), length=32, salt=None, info=info)\n",
-        "#         sym_key = hkdf.derive(shared_bytes)\n",
-        "\n",
-        "#         aesgcm = AESGCM(sym_key)\n",
-        "#         plaintext = aesgcm.decrypt(bundle[\"nonce\"], bundle[\"ciphertext\"], associated_data=None)\n",
-        "#         return plaintext\n",
-        "\n",
-        "# # ------------------ curve parameters ------------------\n",
-        "# p = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEFFFFFC2F\n",
-        "# a = 0\n",
-        "# b = 7\n",
-        "# Gx = 55066263022277343669578718895168534326250603453777594175500187360389116729240\n",
-        "# Gy = 32670510020758816978083085130507043184471273380659243275938904335757337482424 # Corrected Gy\n",
-        "# n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141\n",
-        "\n",
-        "# curve = Elipic_Curve(a, b, p)\n",
-        "# G = Point(Gx, Gy)\n",
-        "\n",
-        "# # ------------------ small test ------------------\n",
-        "# if __name__ == \"__main__\":\n",
-        "#     # generate recipient key\n",
-        "#     recipient_priv = secrets.randbelow(n - 1) + 1\n",
-        "#     recipient_pub = curve.scaler_multiply(recipient_priv, G)\n",
-        "\n",
-        "#     # encrypt/decrypt\n",
-        "#     plaintext = b\"Hello, ECIES-like hybrid!\"\n",
-        "#     bundle = curve.ecies_encrypt(recipient_pub, plaintext)\n",
-        "#     recovered = curve.ecies_decrypt(recipient_priv, bundle)\n",
-        "#     print(\"Recovered:\", recovered)"
-      ],
-      "metadata": {
-        "id": "qtBjqBnsikyB"
-      },
-      "execution_count": 11,
-      "outputs": []
     }
   ]
 }
