--- a/Eliptic_Curve.ipynb
+++ b/Eliptic_Curve.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmdCZbwP09kQbeB1Oqgr90",
+      "authorship_tag": "ABX9TyOZsdJcoPrg8wRmNAWULDqF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +38,12 @@
       "metadata": {
         "id": "I_t6XRSQdSSs"
       },
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {
         "id": "NRNfL9DYZg_l"
       },
@@ -54,7 +54,7 @@
         "        self.x = x\n",
         "        self.y = y\n",
         "\n",
-        "    def __eq__(self, other):                # FIXED: equality for comparisons\n",
+        "    def __eq__(self, other):\n",
         "        if other is None:\n",
         "            return False\n",
         "        return (self.x == other.x) and (self.y == other.y)\n",
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "PAbbH9sSdT4W"
       },
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -285,7 +285,47 @@
       "metadata": {
         "id": "G_GGiFeEcgyP"
       },
-      "execution_count": 15,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import hashlib\n",
+        "\n",
+        "class Elipic_Curve(Elipic_Curve):  # extend your existing class\n",
+        "    def ecdsa_sign(self, msg, priv):\n",
+        "        e = int.from_bytes(hashlib.sha256(msg).digest(), \"big\")\n",
+        "        while True:\n",
+        "            k = secrets.randbelow(n - 1) + 1\n",
+        "            R = self.scaler_multiply(k, G)\n",
+        "            r = R.x % n\n",
+        "            if r == 0:\n",
+        "                continue\n",
+        "            k_inv = pow(k, -1, n)\n",
+        "            s = (k_inv * (e + priv * r)) % n\n",
+        "            if s != 0:\n",
+        "                break\n",
+        "        return (r, s)\n",
+        "\n",
+        "    def ecdsa_verify(self, msg, signature, pub):\n",
+        "        r, s = signature\n",
+        "        if not (1 <= r < n and 1 <= s < n):\n",
+        "            return False\n",
+        "        e = int.from_bytes(hashlib.sha256(msg).digest(), \"big\")\n",
+        "        w = pow(s, -1, n)\n",
+        "        u1 = (e * w) % n\n",
+        "        u2 = (r * w) % n\n",
+        "        X = self.add(self.scaler_multiply(u1, G),\n",
+        "                     self.scaler_multiply(u2, pub))\n",
+        "        if X is None:\n",
+        "            return False\n",
+        "        return (X.x % n) == r\n"
+      ],
+      "metadata": {
+        "id": "TNvqkJ2M1PAR"
+      },
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -303,7 +343,7 @@
       "metadata": {
         "id": "A7VBTkH8c30v"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -319,15 +359,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0a930d3a-65e5-440f-8f74-cc53693bb0a0"
+        "outputId": "0528a150-100c-4142-b2a3-260539ebf899"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(0,7,115792089237316195423570985008687907853269984665640564039457584007908834671663,b'\\x12\\x05nU\\xb6\\xb7\\xcb\\xf4va\\xd8Rd\\x02\\xe0\\xba')\n",
+            "(0,7,115792089237316195423570985008687907853269984665640564039457584007908834671663,b'IO\\x8d\\xe8~\\xb5\\xfe!R<\\x96\\t~\\xf4cg')\n",
             "(55066263022277343669578718895168534326250603453777594175500187360389116729240,32670510020758816978083085130507043184471273380659243275938904335757337482424)\n"
           ]
         }
@@ -337,7 +377,7 @@
       "cell_type": "code",
       "source": [
         "import secrets\n",
-        "\n",
+        "# Reciever private key\n",
         "d = secrets.randbelow(n - 1) + 1\n",
         "print(\"Private key d:\", d)\n"
       ],
@@ -346,15 +386,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pjz5Zp5dk6fV",
-        "outputId": "97fb2158-57bf-4c85-a94d-ccc40ae184ed"
+        "outputId": "326c7532-6a3f-4297-e812-47780672d3d8"
       },
-      "execution_count": 18,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Private key d: 60159238478533472668632988213651047051807135698414826041711905388723971693040\n"
+            "Private key d: 11455676176183148386573211445734049647309862430819547841733778849985700436473\n"
           ]
         }
       ]
@@ -362,6 +402,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Reciever public key\n",
         "Q = curve.scaler_multiply(d, G)\n",
         "print(\"Public key Q:\", Q)"
       ],
@@ -370,15 +411,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AIxUn-6Gk6dx",
-        "outputId": "df20f942-e858-4141-fedc-da61d1124cbc"
+        "outputId": "6c32a22f-f476-473e-aef8-6f6baf70844c"
       },
-      "execution_count": 19,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Public key Q: (95313812788696229704979422681802663980288852291100192442427440126060814436817,39797658172962333727590916744797770878654158122923832768381282931747875993339)\n"
+            "Public key Q: (28736818726222121731898590424111381382250720398196963430207771288399512162010,67487659680413576596411187466153609266769265001522230055773190066810432943880)\n"
           ]
         }
       ]
@@ -386,10 +427,29 @@
     {
       "cell_type": "code",
       "source": [
+        "## Sender side\n",
+        "pri = secrets.randbelow(n-1)+1\n",
+        "pub = curve.scaler_multiply(pri,G)"
+      ],
+      "metadata": {
+        "id": "u7_RTl8D1Zdz"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# encrypt/decrypt\n",
         "plaintext = b\"Hello, ECIES-like hybrid!\"\n",
         "bundle = curve.ecies_encrypt(Q, plaintext)\n",
+        "sig = curve.ecdsa_sign(plaintext, pri)\n",
+        "print(\"Bundle:\", bundle)\n",
+        "print(\"Signature:\", sig)\n",
+        "\n",
         "recovered = curve.ecies_decrypt(d, bundle)\n",
+        "valid = curve.ecdsa_verify(recovered, sig, pub)\n",
+        "print(valid)\n",
         "print(\"Recovered:\", recovered)"
       ],
       "metadata": {
@@ -397,14 +457,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7n8DUY2uX4f_",
-        "outputId": "fddfda0e-4646-4bfe-ba0a-5dfc0508c565"
+        "outputId": "0bb4508b-5714-45ef-8700-d6f693135486"
       },
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Bundle: {'ephemeral_pub': b'\\xce\\xf3\\xab\\xb6\\xee{\\x94\\xe0\\xc9iV]\\x04\\xd5\\xbe\\xcb\\x07sk\\xefgO$3\\xad5\\xd2l:\\x90\\xd8&\\xd26\\xd68\\x18\\x03\\x14y!.\\xbb\\xb7h\\x9ab\\xf8\\xbcw;~\\xeb\\xb8\\xf3u\\xf8\\xe4J\\xb2\\xbf\\x0bN&', 'nonce': b'\\x8bG\\xe1\\xfb\\xd6/\\xcf\\xc7\\xf5/\\x98\\xb3', 'ciphertext': b';\\xf2z\\xb5\\xe4\\x16c\\x98\\xe7E4\\xc4\\x0e5%F\\xf50\\x0bD\\xa8\\rf\\x95C/\\xf2N]\\xe0\\xf0z\\x8d$\\xde&GH5\\xdfe'}\n",
+            "Signature: (72955171310556879319647668068736474565108039004342392108752807513820493697114, 25068423109364365928624575830530137530295144174042010181581117872070806626497)\n",
+            "True\n",
             "Recovered: b'Hello, ECIES-like hybrid!'\n"
           ]
         }
